2017-02-27  Karl Kuhrman  <kkuhrman@pelican>

	* configure.ac: advanced version to 0.1.5; new convention for gnulib, m4 etc
	* src/Makefile.am: removed obsolete char.h char.c
	* tests/Makefile.am: removed bzentest_char.c
	* lib/gnulib: new location for Gnu Portability Library source and macros
	* lib/gettext: new location for internationalization files

2017-02-24  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac: advanced version to 0.1.4
	* inc/bzensbuf.h: declare API to create/destroy stream locks, char i/o
	* src/bzensbuf.c: Streams as FILE* in memory; mutex protects char r/w
	* inc/bzentest.h: macros notate shorthand for common unit testing fns()
	* src/bzentest.c: Added true(int), false(int), equals(n,n), notequals(n,n)

2017-02-13  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac:	advanced version to 0.1.3
	* inc/bzensock.h: add support for Internet namespace

2017-02-11  Karl Kuhrman  <kkuhrman@barzensuit.org>
	* configure.ac: advanced version number to 0.1.2
	* src/bzensock.c: refactored sockets API to resemble corresponding Gnu fns.
	
2017-02-03  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac: advanced version number to 0.1.1
	* src/bzensock.c: unit tested code for dynamic allocation of sockaddr_un
	* src/bzenmem.c: added bzen_realloc()

2017-02-01  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac Version 0.1.0 support for libtool, Gnu Lib and unit tests
	* ChangeLog Initial check in
	* bzensock.c Opens and closes a local socket
