@@ -21,7 +21,7 @@
 # @author:	Karl Kuhrman
 #
 
-AM_CFLAGS = $(WARN_CFLAGS) $(WERROR_CFLAGS) $(CFLAG_VISIBILITY)
+AM_CFLAGS = $(WARN_CFLAGS) $(WERROR_CFLAGS) $(CFLAG_VISIBILITY) -pthread
 
 # Add source file sub-directories to compiler search path
 AM_CPPFLAGS = \
@@ -39,6 +39,7 @@ check_PROGRAMS = \
 	bzentest_socket_create_inet \
 	bzentest_socket_fail \
 	bzentest_ut \
+	bzentest_thread \
 	bzentest_scratch
 
 TESTS = \
@@ -48,6 +49,7 @@ TESTS = \
 	bzentest_socket_create_inet \
 	bzentest_socket_fail \
 	bzentest_ut \
+	bzentest_thread \
 	bzentest_scratch
 
 TESTS_ENVIRONMENT = \
